# sshhub

./: .gitignore  Cargo.toml  README.md  games.toml
crates/frittura-ssh-core/: Cargo.toml  README.md
crates/frittura-ssh-core/src/: channel.rs  client.rs  event.rs  idle.rs  input.rs  keys.rs  lib.rs  server.rs  trait_def.rs  writer.rs
crates/frittura-ssh-hub/: Cargo.toml
crates/frittura-ssh-hub/src/: config.rs  lib.rs  main.rs  tui.rs  ui.rs  utils.rs
crates/frittura-ssh-hub/src/ssh/: bridge.rs  mod.rs  server.rs  session.rs
src/: config.rs  lib.rs  main.rs  tui.rs  ui.rs
src/core/: writer.rs
src/ssh/: bridge.rs  channel.rs  client.rs  mod.rs  server.rs  session.rs  utils.rs
