[workspace]
resolver = "2"
members = ["crates/frittura-ssh-core", "crates/frittura-ssh-hub"]

[workspace.dependencies]
anyhow = "1.0.102"
blake3 = { version = "1.5.5", default-features = false }
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
crossterm = { version = "0.29", default-features = false, features = ["events"] }
directories = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = "0.4.30"
log4rs = { version = "1.4.0", default-features = false, features = ["file_appender", "pattern_encoder"] }
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng", "thread_rng"] }
ratatui = { version = "0.30.0", features = ["unstable-backend-writer"] }
russh = "0.61.1"
serde = { version = "1.0.214", default-features = false, features = ["std", "derive"] }
tokio = { version = "1.52.1", default-features = false, features = ["rt-multi-thread", "time", "macros", "sync", "net", "io-util"] }
toml = { version = "0.9.0", default-features = false, features = ["parse", "serde"] }

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
