[package]
name = "frittura-ssh-core"
version = "0.1.0"
edition = "2021"
description = "Shared SSH/ratatui runtime for ricott1's frittura terminal games."
license = "GPL-3.0-only"
repository = "https://github.com/ricott1/sshhub"

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.29", default-features = false, features = ["events"] }
log = "0.4.27"
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng", "thread_rng"] }
ratatui = { version = "0.30.0", features = ["unstable-backend-writer"] }
russh = "0.60.1"
tokio = { version = "1.52.1", default-features = false, features = ["rt-multi-thread", "time", "macros", "sync", "net", "io-util"] }
