[package]
name = "frittura-ssh-core"
version = "0.1.0"
edition = "2021"
description = "Shared SSH/ratatui runtime for ricott1's frittura terminal games."
license = "GPL-3.0-only"
repository = "https://github.com/ricott1/frittura-ssh"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
log.workspace = true
rand.workspace = true
russh.workspace = true
tokio.workspace = true
