[package]
name = "frittura-ssh-core"
version = "0.2.0"
edition = "2021"
description = "Shared SSH + ratatui runtime for terminal games served over SSH."
license = "GPL-3.0-only"
repository = "https://github.com/ricott1/frittura-ssh"
homepage = "https://github.com/ricott1/frittura-ssh"
readme = "README.md"
keywords = ["ssh", "ratatui", "tui", "game", "russh"]
categories = ["game-development", "network-programming", "command-line-interface"]

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
log.workspace = true
rand.workspace = true
russh.workspace = true
tokio.workspace = true
