[package]
name = "frittura-ssh-hub"
version = "0.1.0"
edition = "2021"
description = "SSH lobby that proxies to ricott1's frittura terminal games."
license = "GPL-3.0-only"
repository = "https://github.com/ricott1/sshhub"

[dependencies]
frittura-ssh-core = { path = "../frittura-ssh-core" }
anyhow = "1.0.102"
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
crossterm = { version = "0.29", default-features = false, features = ["events"] }
directories = "6.0.0"
log = "0.4.27"
log4rs = { version = "1.4.0", default-features = false, features = ["file_appender", "pattern_encoder"] }
ratatui = { version = "0.30.0", features = ["unstable-backend-writer"] }
russh = "0.60.1"
serde = { version = "1.0.214", default-features = false, features = ["std", "derive"] }
tokio = { version = "1.52.1", default-features = false, features = ["rt-multi-thread", "time", "macros", "sync", "net", "io-util"] }
toml = { version = "0.9.0", default-features = false, features = ["parse", "serde"] }
