[package]
name = "frittura-ssh-hub"
version = "0.1.0"
edition = "2021"
description = "SSH lobby that proxies to ricott1's frittura terminal games."
license = "GPL-3.0-only"
repository = "https://github.com/ricott1/frittura-ssh"

[dependencies]
frittura-ssh-core = { path = "../frittura-ssh-core" }
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
log.workspace = true
log4rs.workspace = true
ratatui.workspace = true
russh.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
