[package]
name = "frittura-ssh-hub"
version = "0.1.1"
edition = "2021"
description = "SSH lobby that proxies to frittura terminal games."
license = "GPL-3.0-only"
repository = "https://github.com/ricott1/frittura-ssh"

[dependencies]
frittura-ssh-core = { path = "../frittura-ssh-core" }
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
image.workspace = true
log.workspace = true
log4rs.workspace = true
ratatui.workspace = true
russh.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
gif = "0.14.2"
